new intro and pdfs

--- a/index.html
+++ b/index.html
@@ -91,12 +91,21 @@
 
 <div>
 
-  <br/><br/>
-  
-  
-  
+<div style="text-align:left; font-size:13px">The real voyage of discovery lies in not seeing new landscapes but in having new eyes. (Marcel Proust)</div>
 
-<pre><code>        Office:         MF 6.122a 
+<br/>
+
+I am an Assistant Professor at the <a href="https://security1.win.tue.nl">Security Group</a> of the <a href="https://www.tue.nl">Eindhoven University of Technology</a>, in the Netherlands. I investigate <b>attacker operations</b> (<a href="https://www.usenix.org/system/files/conference/cset13/cset13-allodi.pdf">[1]</a>, <a href="http://link.springer.com/chapter/10.1007/978-3-319-15618-7_11">[2]</a>) and <b> economics</b> (<a href="https://dl.acm.org/citation.cfm?id=3133960">[3]</a>, <a href="http://ssrn.com/abstract=2862299"> [4]</a>) to improve <b>operational defense</b> capabilities (<a href="http://onlinelibrary.wiley.com/resolve/doi?DOI=10.1111/risa.12864">[5]</a>, <a href="https://dl.acm.org/citation.cfm?id=2630069&picked=formats">[6]</a>).
+
+My research draws from several field, including computer security, economics, risk analysis, and criminology.
+
+I manage the B-LAB and Security Operation Center Laboratories @ TU/e.
+
+<h3>About</h3>
+
+  
+  
+  <pre><code>        Office:         MF 6.122a 
                         P.O. Box 513, 5600 MB
                         Eindhoven, The Netherlands
         Email:          l.allodi at tue.nl
@@ -111,13 +120,17 @@
 My LinkedIn page (hardly updated) is <a href="https://it.linkedin.com/in/lallodi"> this</a>.<br/>
 My Twitter handle is <a href="https://twitter.com/securescientist">@securescientist</a>.</p>
 
-<h3 id="more-verbosely">More verbosely</h3>
 
-<p>I am an Assistant Professor at the <a href="http://security1.win.tue.nl">Security Group</a> of the <a href="http://www.tue.nl">Eindhoven University of Technology, in the Netherlands</a>. Previously I worked and studied at the <a href="http://www.unitn.it">University of Trento, Italy</a>, where graduated my PhD in 2015 with a thesis entitled: <i>&ldquo;Risk-based Vulnerability Management. Exploiting the economic nature of the attacker to build sound and measurable vulnerability mitigation strategies&rdquo;</i>.</p>
 
-<p>The gist of my research is to find the technical, economic, and strategic factors that drive vulnerability exploitation <i>in the wild</i>. To this aim I investigate the <a href="http://ssrn.com/abstract=2862299"> dynamic optimization problems the attacker solves when engineering a new attack</a>, <a href="http://ieeexplore.ieee.org/abstract/document/7044581/">the underground markets in which the attackers operate</a>, <a href="https://www.usenix.org/system/files/conference/cset13/cset13-allodi.pdf">the technology they employ</a>, and <a href="http://link.springer.com/chapter/10.1007/978-3-319-15618-7_11"> the rates at which attacks are delivered to the final users</a>. My research draws from several field, including computer security, economics, risk analysis, and criminology.</p>
+<h3>Recent highlights</h3>
 
-<p>I am also an acknowledged authoring member of the First.org SIG Team for the upcoming CVSS v3 framework (the worldwide standard-de-facto for vulnerability assessment).</p>
+  
+  
+  <ul>
+<li>Amber van der Heijden, Luca Allodi. Cognitive Triaging of Phishing Attacks. <strong>In Proceedings of Usenix Security 2019 (to appear)</strong>.</li>
+<li>Luca Allodi. 2017. Economic Factors of Vulnerability Trade and Exploitation. In Proceedings of the <strong>2017 ACM SIGSAC Conference on Computer and Communications Security (CCS &lsquo;17).</strong> ACM, New York, NY, USA, 1483-1499. DOI: <a href="https://doi.org/10.1145/3133956.3133960">https://doi.org/10.1145/3133956.3133960</a> </i> <b>(Acc. rate 18%).</b><a href="https://arxiv.org/abs/1708.04866"> Preprint </a></li>
+<li>Allodi, L. and Massacci, F. (2017), Security Events and Vulnerability Data for Cybersecurity Risk Estimation.  <i> Risk Analysis, 37: 1606–1627. <a href="http://onlinelibrary.wiley.com/resolve/doi?DOI=10.1111/risa.12864">doi:10.1111/risa.12864</a> </i> <b>Impact factor: 2.225, ISI Journal Citation Reports Ranking: 2015: <sup>6</sup>&frasl;<sub>49</sub> (Social Sciences Mathematical Methods); <sup>17</sup>&frasl;<sub>101</sub> (Mathematics Interdisciplinar
+
 
 
 
