small fix in highlights

--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@ My Twitter handle is <a href="https://twitter.com/securescientist">@securescient
   
   <ul>
 <li>Amber van der Heijden, Luca Allodi. Cognitive Triaging of Phishing Attacks. <strong>In Proceedings of Usenix Security 2019 (to appear)</strong>.</li>
-<li>Luca Allodi. 2017. Economic Factors of Vulnerability Trade and Exploitation. In Proceedings of the <strong>2017 ACM SIGSAC Conference on Computer and Communications Security (CCS &lsquo;17).</strong> ACM, New York, NY, USA, 1483-1499. DOI: <a href="https://doi.org/10.1145/3133956.3133960">https://doi.org/10.1145/3133956.3133960</a> </i> <b>(Acc. rate 18%).</b><a href="https://arxiv.org/abs/1708.04866"> Preprint </a></li>
-<li>Allodi, L. and Massacci, F. (2017), Security Events and Vulnerability Data for Cybersecurity Risk Estimation.  <i> Risk Analysis, 37: 1606–1627. <a href="http://onlinelibrary.wiley.com/resolve/doi?DOI=10.1111/risa.12864">doi:10.1111/risa.12864</a> </i> <b>Impact factor: 2.225, ISI Journal Citation Reports Ranking: 2015: <sup>6</sup>&frasl;<sub>49</sub> (Social Sciences Mathematical Methods); <sup>17</sup>&frasl;<sub>101</sub> (Mathematics Interdisciplinar
+<li>Luca Allodi. 2017. Economic Factors of Vulnerability Trade and Exploitation. In Proceedings of the <strong>2017 ACM SIGSAC Conference on Computer and Communications Security (CCS &lsquo;17).</strong> ACM, New York, NY, USA, 1483-1499. DOI: <a href="https://doi.org/10.1145/3133956.3133960">https://doi.org/10.1145/3133956.3133960</a> </i> <b>(Acc. rate 18%).</b><a href="https://arxiv.org/abs/1708.04866"> Preprint</a>.</li>
+<li>Allodi, L. and Massacci, F. (2017), Security Events and Vulnerability Data for Cybersecurity Risk Estimation.  <i> Risk Analysis, 37: 1606–1627. <a href="http://onlinelibrary.wiley.com/resolve/doi?DOI=10.1111/risa.12864">doi:10.1111/risa.12864</a> </i> <b>Impact factor: 2.225, ISI Journal Citation Reports Ranking: 2015: <sup>6</sup>&frasl;<sub>49</sub> (Social Sciences Mathematical Methods); <sup>17</sup>&frasl;<sub>101</sub> (Mathematics Interdisciplinary Applications).</b> <a href="allodi-risa-17.pdf"> Pre pub version</a>.</li>
+</ul>
 
 
 
