--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ cvss, attacker economics, security operation center, malware analysis">
 
 I am an Assistant Professor at the <a href="https://security1.win.tue.nl">Security Group</a> of the <a href="https://www.tue.nl">Eindhoven University of Technology</a>, in the Netherlands. I investigate <b>attacker operations</b> (<a href="https://www.usenix.org/system/files/conference/cset13/cset13-allodi.pdf">[1]</a>, <a href="http://link.springer.com/chapter/10.1007/978-3-319-15618-7_11">[2]</a>) and <b> economics</b> (<a href="https://dl.acm.org/citation.cfm?id=3133960">[3]</a>, <a href="http://ssrn.com/abstract=2862299"> [4]</a>) to improve <b>operational defense</b> capabilities (<a href="http://onlinelibrary.wiley.com/resolve/doi?DOI=10.1111/risa.12864">[5]</a>, <a href="https://dl.acm.org/citation.cfm?id=2630069&picked=formats">[6]</a>).
 
-My research draws from several field, including computer security, economics, risk analysis, and criminology.
+My research draws from several fields, including computer security, economics, risk analysis, and criminology.
 
 I manage the B-LAB and Security Operation Center Laboratories @ TU/e.
 
