--- a/index.html
+++ b/index.html
@@ -123,16 +123,30 @@ My Twitter handle is <a href="https://twitter.com/securescientist">@securescient
 
 
 
-<h3>Recent highlights</h3>
+<h3>Some highlights</h3>
 
-  
-  
-  <ul>
-<li>Amber van der Heijden, Luca Allodi. Cognitive Triaging of Phishing Attacks. <strong>In Proceedings of Usenix Security 2019 (to appear)</strong>.</li>
-<li>Luca Allodi. 2017. Economic Factors of Vulnerability Trade and Exploitation. In Proceedings of the <strong>2017 ACM SIGSAC Conference on Computer and Communications Security (CCS &lsquo;17).</strong> ACM, New York, NY, USA, 1483-1499. DOI: <a href="https://doi.org/10.1145/3133956.3133960">https://doi.org/10.1145/3133956.3133960</a> </i> <b>(Acc. rate 18%).</b><a href="https://arxiv.org/abs/1708.04866"> Preprint</a>.</li>
-<li>Allodi, L. and Massacci, F. (2017), Security Events and Vulnerability Data for Cybersecurity Risk Estimation.  <i> Risk Analysis, 37: 1606–1627. <a href="http://onlinelibrary.wiley.com/resolve/doi?DOI=10.1111/risa.12864">doi:10.1111/risa.12864</a> </i> <b>Impact factor: 2.225, ISI Journal Citation Reports Ranking: 2015: <sup>6</sup>&frasl;<sub>49</sub> (Social Sciences Mathematical Methods); <sup>17</sup>&frasl;<sub>101</sub> (Mathematics Interdisciplinary Applications).</b> <a href="allodi-risa-17.pdf"> Pre pub version</a>.</li>
+
+
+
+
+
+
+
+
+
+<h4>Standard setting</h4>
+I am one of the authoring member of the First.org/NIST Common Vulnerability Scoring System Standard. <em>First.org CVSS Special Interest Group (Authoring member)</em>. Common Vulnerability Scoring System (CVSS) v3. Published at <a href="http://www.first.org/cvss">http://www.first.org/cvss</a>.
+
+<h4>Publications</h4>
+<ul>
+<li>Amber van der Heijden, Luca Allodi. Cognitive Triaging of Phishing Attacks. <strong>In Proceedings of Usenix Security 2019</strong> (to appear). <b>(Acc. rate 18%).</b> <a href='https://arxiv.org/abs/1905.02162'> Preprint</a>.</li>
 </ul>
-
+<ul>
+<li>Luca Allodi. 2017. Economic Factors of Vulnerability Trade and Exploitation. In Proceedings of the <strong>2017 ACM SIGSAC Conference on Computer and Communications Security (CCS &lsquo;17).</strong> ACM, New York, NY, USA, 1483-1499. DOI: <a href="https://doi.org/10.1145/3133956.3133960">https://doi.org/10.1145/3133956.3133960</a> </i> <b>(Acc. rate 18%).</b><a href='https://arxiv.org/abs/1708.04866'> Preprint</a>.</li>
+</ul>
+<ul>
+<li>Allodi, L. and Massacci, F. (2017), Security Events and Vulnerability Data for Cybersecurity Risk Estimation.  <i> Risk Analysis, 37: 1606–1627. <a href='http://onlinelibrary.wiley.com/resolve/doi?DOI=10.1111/risa.12864'>doi:10.1111/risa.12864</a> </i> <b>Impact factor: 2.225, ISI Journal Citation Reports Ranking: 2015: <sup>6</sup>&frasl;<sub>49</sub> (Social Sciences Mathematical Methods); <sup>17</sup>&frasl;<sub>101</sub> (Mathematics Interdisciplinary Applications).</b> <a href='allodi-risa-17.pdf'> Preprint</a>.</li>
+</ul>
 
 
 
