--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ My research draws from several fields, including computer security, economics, r
 
 I manage the B-LAB and Security Operation Center Laboratories @ TU/e.
 
+
 <h3>About</h3>
 
   
@@ -124,6 +125,10 @@ My Twitter handle is <a href="https://twitter.com/securescientist">@securescient
 
 
 <h3>Some highlights</h3>
+
+<h4>Organization</h4>
+
+I am the organizer and co-chair of the multidisciplinary <a href="https://wacco-workshop.eu/">Workshop on Attackers and Cyber-Criminal Operations (WACCO)</a>, together with, <a href="https://wacco-workshop.eu/#organization">among others</a>, Alice Hutchings (<a href="https://twitter.com/message4bob">Twitter</a>, <a href="https://www.cl.cam.ac.uk/~ah793/">homepage</a>) and Serge Egelman (<a href="https://twitter.com/v0max">Twitter</a>, <a href="https://www.icsi.berkeley.edu/icsi/people/egelman">homepage</a>). The 2019 edition has been hosted with the <a href="https://www.ieee-security.org/TC/EuroSP2019/index.php">4th European Symposium on Security and Privacy in Stockholm</a>, Sweden. We'll have another edition in 2020 (this was great).
 
 
 
