projects and publications update

--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@ My Twitter handle is <a href="https://twitter.com/securescientist">@securescient
 
 <h4>Organization</h4>
 
-I am the organizer and co-chair of the multidisciplinary <a href="https://wacco-workshop.eu/">Workshop on Attackers and Cyber-Criminal Operations (WACCO)</a>, together with, <a href="https://wacco-workshop.eu/#organization">among others</a>, Alice Hutchings (<a href="https://twitter.com/message4bob">Twitter</a>, <a href="https://www.cl.cam.ac.uk/~ah793/">homepage</a>) and Serge Egelman (<a href="https://twitter.com/v0max">Twitter</a>, <a href="https://www.icsi.berkeley.edu/icsi/people/egelman">homepage</a>). The 2019 edition has been hosted with the <a href="https://www.ieee-security.org/TC/EuroSP2019/index.php">4th European Symposium on Security and Privacy in Stockholm</a>, Sweden. We'll have another edition in 2020 (this was great).
+I am the organizer and co-chair of the multidisciplinary <a href="https://wacco-workshop.eu/">Workshop on Attackers and Cyber-Criminal Operations (WACCO)</a>, together with, <a href="https://wacco-workshop.eu/#organization">among others</a>, Alice Hutchings (<a href="https://twitter.com/message4bob">Twitter</a>, <a href="https://www.cl.cam.ac.uk/~ah793/">homepage</a>) and Sergio Pastrana (<a href="https://twitter.com/serpastrana">Twitter</a>, <a href="https://www.cl.cam.ac.uk/~sp849/">homepage</a>). 
+The workshop is held annually (now at its 2nd edition) jointly with the <a href="https://www.ieee-security.org/TC/EuroSP2020/index.php">European Symposium on Security and Privacy</a>.
 
 
 
