--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@ My research draws from several fields, including computer security, economics, r
 
 I manage the B-LAB and Security Operation Center Laboratories @ TU/e.
 
+<h3>Students</h3>
+
+<ul>
+	<li>Michele Campobasso on cybercrime operations and ecosystems. <a href="https://michelecampobasso.github.io">Website</a>, <a href="https://scholar.google.com/citations?user=vDHUDEAAAAAJ&hl=en&oi=sra"> GScholar profile</a>.</li>
+	<li>Pavlo Burda on advanced social engineering.<a href="https://scholar.google.com/citations?user=X6xku1Im18sC&hl=en&oi=ao"> GScholar profile</a>.</li> 
+</ul>
+
 
 <h3>About</h3>
 
