--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ The workshop is held annually (now at its 2nd edition) jointly with the <a href=
 
 <h4>Publications</h4>
 <ul>
-<li>Martin Rosso, <a href='https://michelecampobasso.github.io'>Michele Campobasso</a>, Ganduulga Gankhuyag, Luca Allodi. SAIBERSOC: Synthetic Attack Injection to Benchmark and Evaluate the Performance of Security Operation Centers. <strong>In Proceedings of the 36th Annual Computer Security Applications Conference (ACSAC 2020). (acc. rate 23%)</strong></li>
+<li>Martin Rosso, <a href='https://michelecampobasso.github.io'>Michele Campobasso</a>, Ganduulga Gankhuyag, Luca Allodi. SAIBERSOC: Synthetic Attack Injection to Benchmark and Evaluate the Performance of Security Operation Centers. <strong>In Proceedings of the 36th Annual Computer Security Applications Conference (ACSAC 2020). (acc. rate 23%)</strong> <a href='https://arxiv.org/abs/2010.08453'> Preprint</a></li>
 </ul>
 <ul>
 <li><a href='https://michelecampobasso.github.io'>Michele Campobasso</a>, Luca Allodi. Impersonation-as-a-Service: Characterizing the Emerging Criminal Infrastructure for User Impersonation at Scale. <strong>In Proceedings of the ACM Conference on Computer and Communications Security (ACM CCS 2020)</strong> <a href='https://arxiv.org/abs/2009.04344'> Preprint</a>.</li>
