--- a/publications/index.html
+++ b/publications/index.html
@@ -146,8 +146,8 @@
 <h2 id="policy-white-papers">Policy (white) papers</h2>
 
 <ol>
-<li>Winnona DeSombre, James Shires, JD Work, Robert Morgus, Patrick Howell O’Neill, Luca Allodi, and Trey Herr. Countering cyber proliferation: Zeroing in on Access-as-a-Service. <strong>Atlantic Council</strong>. <a href="https://www.atlanticcouncil.org/in-depth-research-reports/report/countering-cyber-proliferation-zeroing-in-on-access-as-a-service/"> Available on the Atlantic Council&rsquo;s website</a>.</li>
-<li>Winnona DeSombre, <a href="michelecampobasso.github.io">Michele Campobasso</a>, Luca Allodi, Dr. James Shires, JD Work, Robert Morgus, Patrick Howell O’Neill, and Dr. Trey Herr. A primer on the proliferation of offensive cyber capabilities. <strong>Atlantic Council</strong>. <a href="https://www.atlanticcouncil.org/in-depth-research-reports/issue-brief/a-primer-on-the-proliferation-of-offensive-cyber-capabilities/"> Available on the Atlantic Council&rsquo;s website</a>.</li>
+<li>Winnona DeSombre, James Shires, JD Work, Robert Morgus, Patrick Howell O’Neill, Luca Allodi, and Trey Herr. Countering cyber proliferation: Zeroing in on Access-as-a-Service. <strong>Atlantic Council, 2021</strong>. <a href="https://www.atlanticcouncil.org/in-depth-research-reports/report/countering-cyber-proliferation-zeroing-in-on-access-as-a-service/"> Available on the Atlantic Council&rsquo;s website</a>.</li>
+<li>Winnona DeSombre, <a href="michelecampobasso.github.io">Michele Campobasso</a>, Luca Allodi, Dr. James Shires, JD Work, Robert Morgus, Patrick Howell O’Neill, and Dr. Trey Herr. A primer on the proliferation of offensive cyber capabilities. <strong>Atlantic Council, 2021</strong>. <a href="https://www.atlanticcouncil.org/in-depth-research-reports/issue-brief/a-primer-on-the-proliferation-of-offensive-cyber-capabilities/"> Available on the Atlantic Council&rsquo;s website</a>.</li>
 </ol>
 
 <h2 id="conferences">Conferences</h2>
