--- a/index.html
+++ b/index.html
@@ -96,17 +96,20 @@ cvss, attacker economics, security operation center, malware analysis">
 
 <br/>
 
-I am an Assistant Professor at the <a href="https://security1.win.tue.nl">Security Group</a> of the <a href="https://www.tue.nl">Eindhoven University of Technology</a>, in the Netherlands. I investigate <b>attacker operations</b> (<a href="https://www.usenix.org/system/files/conference/cset13/cset13-allodi.pdf">[1]</a>, <a href="http://link.springer.com/chapter/10.1007/978-3-319-15618-7_11">[2]</a>) and <b> economics</b> (<a href="https://dl.acm.org/citation.cfm?id=3133960">[3]</a>, <a href="http://ssrn.com/abstract=2862299"> [4]</a>) to improve <b>operational defense</b> capabilities (<a href="http://onlinelibrary.wiley.com/resolve/doi?DOI=10.1111/risa.12864">[5]</a>, <a href="https://dl.acm.org/citation.cfm?id=2630069&picked=formats">[6]</a>).
+I am an Assistant Professor at the <a href="https://security1.win.tue.nl">Security Group</a> of the <a href="https://www.tue.nl">Eindhoven University of Technology</a>, in the Netherlands. I investigate <b>attacker operations</b> (<a href="https://www.usenix.org/system/files/conference/cset13/cset13-allodi.pdf">[1]</a>, <a href="http://link.springer.com/chapter/10.1007/978-3-319-15618-7_11">[2]</a>), <b> economics</b> (<a href="https://dl.acm.org/citation.cfm?id=3133960">[3]</a>,<a href="http://ssrn.com/abstract=2862299"> [4]</a>), and how these are ultimately delivered to the (human) user (<a href="https://ieeexplore.ieee.org/abstract/document/9583678/">
+  [5]
+</a>, <a href="https://www.usenix.org/conference/usenixsecurity19/presentation/van-der-heijden">[6]</a>) to improve <b>operational defense</b> capabilities (<a href="http://onlinelibrary.wiley.com/resolve/doi?DOI=10.1111/risa.12864">[7]</a>, <a href="https://dl.acm.org/citation.cfm?id=2630069&picked=formats">[8]</a>).
 
 My research draws from several fields, including computer security, economics, risk analysis, and criminology.
 
-I manage the B-LAB and Security Operation Center Laboratories @ TU/e.
+I am the Scientific Director of the Eindhoven Security Hub SOC, a facility managed by the TU/e SECurity group and devoted to delivering cutting-edge security monitoring services to its customers. Read more about it <a href="http://security1.win.tue.nl/doku.php?id=esh-soc"> here</a> and <a href="https://www.eindhovensecurityhub.nl">here</a>.
 
 <h3>Students</h3>
 
 <ul>
 	<li>Michele Campobasso on cybercrime operations and ecosystems. <a href="https://michelecampobasso.github.io">Website</a>, <a href="https://scholar.google.com/citations?user=vDHUDEAAAAAJ&hl=en&oi=sra"> GScholar profile</a>.</li>
-	<li>Pavlo Burda on advanced social engineering.<a href="https://scholar.google.com/citations?user=X6xku1Im18sC&hl=en&oi=ao"> GScholar profile</a>.</li> 
+	<li>Pavlo Burda on advanced social engineering.<a href="https://scholar.google.com/citations?user=X6xku1Im18sC&hl=en&oi=ao"> GScholar profile</a>.</li>
+  <li>Leon Kersten on decision support for cybersecurity analysis.</li> 
 </ul>
 
 
@@ -114,7 +117,7 @@ I manage the B-LAB and Security Operation Center Laboratories @ TU/e.
 
   
   
-  <pre><code>        Office:         MF 6.122a 
+  <pre><code>        Office:         MF 6.122 
                         P.O. Box 513, 5600 MB
                         Eindhoven, The Netherlands
         Email:          l.allodi at tue.nl
@@ -152,7 +155,7 @@ The workshop is held annually (now at its 2nd edition) jointly with the <a href=
 
 
 
-<h4>Publications</h4>
+<h4>A selection of publications</h4>
 <ul>
 <li>Martin Rosso, <a href='https://michelecampobasso.github.io'>Michele Campobasso</a>, Ganduulga Gankhuyag, Luca Allodi. SAIBERSOC: Synthetic Attack Injection to Benchmark and Evaluate the Performance of Security Operation Centers. <strong>In Proceedings of the 36th Annual Computer Security Applications Conference (ACSAC 2020). (acc. rate 23%) Distinguished Paper with Artifacts Award</strong> <a href='https://arxiv.org/abs/2010.08453'> Preprint</a>.</li>
 </ul>
@@ -165,7 +168,6 @@ The workshop is held annually (now at its 2nd edition) jointly with the <a href=
 <ul>
 <li>Luca Allodi. 2017. Economic Factors of Vulnerability Trade and Exploitation. In Proceedings of the <strong>2017 ACM SIGSAC Conference on Computer and Communications Security (CCS &lsquo;17).</strong> ACM, New York, NY, USA, 1483-1499. DOI: <a href="https://doi.org/10.1145/3133956.3133960">https://doi.org/10.1145/3133956.3133960</a> </i> <b>(Acc. rate 18%).</b><a href='https://arxiv.org/abs/1708.04866'> Preprint</a>.</li>
 </ul>
-
 
 
 </div>
