--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ I am an Assistant Professor at the <a href="https://security1.win.tue.nl">Securi
 
 My research draws from several fields, including computer security, economics, risk analysis, and criminology.
 
-I am the Scientific Director of the Eindhoven Security Hub SOC, a facility managed by the TU/e SECurity group and devoted to delivering cutting-edge security monitoring services to its customers. Read more about it <a href="http://security1.win.tue.nl/doku.php?id=esh-soc"> here</a> and <a href="https://www.eindhovensecurityhub.nl">here</a>.
+<br/><br/>
+I am the Scientific Director of the <b>Eindhoven Security Hub SOC</b>, a facility managed by the TU/e SECurity group and devoted to delivering cutting-edge security monitoring services to its customers. Read more about it <a href="http://security1.win.tue.nl/doku.php?id=esh-soc"> here</a> and <a href="https://www.eindhovensecurityhub.nl">here</a>.
 
 <h3>Students</h3>
 
