--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ I am the Scientific Director of the <b>Eindhoven Security Hub SOC</b>, a facilit
 	<li>Michele Campobasso on cybercrime operations and ecosystems. <a href="https://michelecampobasso.github.io">Website</a>, <a href="https://scholar.google.com/citations?user=vDHUDEAAAAAJ&hl=en&oi=sra"> GScholar profile</a>.</li>
 	<li>Pavlo Burda on advanced social engineering.<a href="https://scholar.google.com/citations?user=X6xku1Im18sC&hl=en&oi=ao"> GScholar profile</a>.</li>
   <li>Leon Kersten on decision support for cybersecurity analysis.</li> 
-  <li>Koen Teuwen on threat intelligence operationalization</li>
+  <li>Koen Teuwen on threat intelligence operationalization.</li>
 </ul>
 
 
@@ -132,8 +132,8 @@ I am the Scientific Director of the <b>Eindhoven Security Hub SOC</b>, a facilit
 
 <p>I <b>DO NOT</b> have a Facebook profile.<br/>
 My LinkedIn page (hardly updated) is <a href="https://it.linkedin.com/in/lallodi"> this</a>.<br/>
-My Twitter handle is <a href="https://twitter.com/securescientist">@securescientist</a>.
-I am in Mastodong at <a rel="me" href="https://infosec.exchange/@securescientist">@securescientist@infosec.exchange</a></p>
+My Twitter handle is <a href="https://twitter.com/securescientist">@securescientist</a>.<br/>
+I am on Mastodon at <a rel="me" href="https://infosec.exchange/@securescientist">@securescientist@infosec.exchange</a>.</p>
 
 
 
