--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
     
     <meta name="description" property="og:description" content=" Office: MF 6.122 P.O. Box 513, 5600 MB Eindhoven, The Netherlands Email: l.allodi at tue.nl PGP fngrprnt: 950E 3DC8 EB66 DFF3 B64D 7848 A0AD 0BB6 5DC4 98F1  Public key here.
 Curriculum Vitae
-I DO NOT have a Facebook profile. My LinkedIn page (hardly updated) is this. My Twitter handle is @securescientist. I am in Mastodong at @securescientist@infosec.exchange
+I DO NOT have a Facebook profile. My LinkedIn page (hardly updated) is this. My Twitter handle is @securescientist. I am on Mastodon at @securescientist@infosec.exchange.
 |Academic Website of Luca Allodi, Eindhoven University of Technology, the Netherlands. information security economics, attack economics, black markets, cybercrime, underground economy, cvss, security operation center">
     
 
@@ -130,8 +130,8 @@ I DO NOT have a Facebook profile. My LinkedIn page (hardly updated) is this. My 
 
 <p>I <b>DO NOT</b> have a Facebook profile.<br/>
 My LinkedIn page (hardly updated) is <a href="https://it.linkedin.com/in/lallodi"> this</a>.<br/>
-My Twitter handle is <a href="https://twitter.com/securescientist">@securescientist</a>.
-I am in Mastodong at <a rel="me" href="https://infosec.exchange/@securescientist">@securescientist@infosec.exchange</a></p>
+My Twitter handle is <a href="https://twitter.com/securescientist">@securescientist</a>.<br/>
+I am on Mastodon at <a rel="me" href="https://infosec.exchange/@securescientist">@securescientist@infosec.exchange</a>.</p>
 
 <h3 id="more-verbosely">More verbosely</h3>
 
