--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ I am the Scientific Director of the <b>Eindhoven Security Hub SOC</b>, a facilit
 <p>I <b>DO NOT</b> have a Facebook profile.<br/>
 My LinkedIn page (hardly updated) is <a href="https://it.linkedin.com/in/lallodi"> this</a>.<br/>
 My Twitter handle is <a href="https://twitter.com/securescientist">@securescientist</a>.<br/>
-I am on Mastodon at <a rel="me" href="https://infosec.exchange/@securescientist">@securescientist@infosec.exchange</a>.</p>
+I am on Mastodon at <a rel="me" href="https://fediscience.org/@securescientist">@securescientist@fediscience.org</a>.</p>
 
 
 
