update publications and links

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ I am the Scientific Director of the <b>Eindhoven Security Hub SOC</b>, a facilit
 
 <ul>
 	<li>Michele Campobasso on cybercrime operations and ecosystems. <a href="https://michelecampobasso.github.io">Website</a>, <a href="https://scholar.google.com/citations?user=vDHUDEAAAAAJ&hl=en&oi=sra"> GScholar profile</a>.</li>
-	<li>Pavlo Burda on advanced social engineering.<a href="https://scholar.google.com/citations?user=X6xku1Im18sC&hl=en&oi=ao"> GScholar profile</a>.</li>
+	<li>Pavlo Burda on advanced social engineering. <a href="https://www.pavlo.it">Website</a>, <a href="https://scholar.google.com/citations?user=X6xku1Im18sC&hl=en&oi=ao"> GScholar profile</a>.</li>
   <li>Leon Kersten on decision support for cybersecurity analysis.</li> 
   <li>Koen Teuwen on threat intelligence operationalization.</li>
 </ul>
@@ -142,7 +142,11 @@ I am on Mastodon at <a rel="me" href="https://fediscience.org/@securescientist">
 <h4>Organization</h4>
 
 I am the organizer and co-chair of the multidisciplinary <a href="https://wacco-workshop.eu/">Workshop on Attackers and Cyber-Criminal Operations (WACCO)</a>, together with, <a href="https://wacco-workshop.eu/#organization">among others</a>, Alice Hutchings (<a href="https://twitter.com/message4bob">Twitter</a>, <a href="https://www.cl.cam.ac.uk/~ah793/">homepage</a>) and Sergio Pastrana (<a href="https://twitter.com/serpastrana">Twitter</a>, <a href="https://www.cl.cam.ac.uk/~sp849/">homepage</a>). 
-The workshop is held annually (now at its 2nd edition) jointly with the <a href="https://www.ieee-security.org/TC/EuroSP2020/index.php">European Symposium on Security and Privacy</a>.
+The workshop is held annually jointly with the IEEE European Symposium on Security and Privacy.
+
+
+
+
 
 
 
@@ -159,6 +163,12 @@ The workshop is held annually (now at its 2nd edition) jointly with the <a href=
 
 
 <h4>A selection of publications</h4>
+<ul>
+<li>Marin, I. and <a href='https://www.pavlo.it'>Burda, P.</a> and Zannone, N. and Allodi, L. (2023), The Influence of Human Factors on the Intention to Report Phishing Emails  <i> <b> In Proceedings of the 2023 ACM CHI Conference on Human Factors in Computing Systems. </b> <a href='https://pburda.win.tue.nl/publications/CHI_2023.pdf'> Preprint</a></i>.</li>
+</ul>
+<ul>
+<li><a href='https://michelecampobasso.github.io'>Campobasso, M.</a> and Allodi, L.  (2023), Know Your Cybercriminal: Evaluating Attacker Preferences by Measuring Profile Sales on an Active, Leading Criminal Market for User Impersonation at Scale. <i> <b> In Proceedings of USENIX Security 2023.</b> <a href='https://arxiv.org/abs/2303.03249'>Preprint</a></i>.</li>
+</ul>
 <ul>
 <li>Martin Rosso, <a href='https://michelecampobasso.github.io'>Michele Campobasso</a>, Ganduulga Gankhuyag, Luca Allodi. SAIBERSOC: Synthetic Attack Injection to Benchmark and Evaluate the Performance of Security Operation Centers. <strong>In Proceedings of the 36th Annual Computer Security Applications Conference (ACSAC 2020). (acc. rate 23%) Distinguished Paper with Artifacts Award</strong> <a href='https://arxiv.org/abs/2010.08453'> Preprint</a>.</li>
 </ul>
