--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@ cvss, attacker economics, security operation center, malware analysis">
 
 <br/>
 
-I am an Assistant Professor at the <a href="https://security1.win.tue.nl">Security Group</a> of the <a href="https://www.tue.nl">Eindhoven University of Technology</a>, in the Netherlands. I investigate <b>attacker operations</b> (<a href="https://www.usenix.org/system/files/conference/cset13/cset13-allodi.pdf">[1]</a>, <a href="http://link.springer.com/chapter/10.1007/978-3-319-15618-7_11">[2]</a>), <b> economics</b> (<a href="https://dl.acm.org/citation.cfm?id=3133960">[3]</a>,<a href="http://ssrn.com/abstract=2862299"> [4]</a>), and how these are ultimately delivered to the (human) user (<a href="https://ieeexplore.ieee.org/abstract/document/9583678/">
+I am an Associate Professor and head of the Threat Analysis group within the <a href="https://security1.win.tue.nl">Security Cluster</a> of the <a href="https://www.tue.nl">Eindhoven University of Technology</a>, in the Netherlands. We investigate <b>attacker operations</b> (<a href="https://www.usenix.org/system/files/conference/cset13/cset13-allodi.pdf">[1]</a>, <a href="http://link.springer.com/chapter/10.1007/978-3-319-15618-7_11">[2]</a>), <b> economics</b> (<a href="https://dl.acm.org/citation.cfm?id=3133960">[3]</a>,<a href="http://ssrn.com/abstract=2862299"> [4]</a>), and how these are ultimately delivered to the (human) user (<a href="https://ieeexplore.ieee.org/abstract/document/9583678/">
   [5]
 </a>, <a href="https://www.usenix.org/conference/usenixsecurity19/presentation/van-der-heijden">[6]</a>) to improve <b>operational defense</b> capabilities (<a href="http://onlinelibrary.wiley.com/resolve/doi?DOI=10.1111/risa.12864">[7]</a>, <a href="https://dl.acm.org/citation.cfm?id=2630069&picked=formats">[8]</a>).
 
-My research draws from several fields, including computer security, economics, risk analysis, and criminology.
+Our research draws from several fields, including computer security, economics, risk analysis, and criminology.
 
 <br/><br/>
 I am the Scientific Director of the <b>Eindhoven Security Hub SOC</b>, a facility managed by the TU/e SECurity group and devoted to delivering cutting-edge security monitoring services to its customers. Read more about it <a href="http://security1.win.tue.nl/doku.php?id=esh-soc"> here</a> and <a href="https://www.eindhovensecurityhub.nl">here</a>.
@@ -110,7 +110,7 @@ I am the Scientific Director of the <b>Eindhoven Security Hub SOC</b>, a facilit
 <ul>
 	<li>Michele Campobasso on cybercrime operations and ecosystems. <a href="https://michelecampobasso.github.io">Website</a>, <a href="https://scholar.google.com/citations?user=vDHUDEAAAAAJ&hl=en&oi=sra"> GScholar profile</a>.</li>
 	<li>Pavlo Burda on advanced social engineering. <a href="https://www.pavlo.it">Website</a>, <a href="https://scholar.google.com/citations?user=X6xku1Im18sC&hl=en&oi=ao"> GScholar profile</a>.</li>
-  <li>Leon Kersten on decision support for cybersecurity analysis.</li> 
+  <li>Leon Kersten on decision support for cybersecurity analysis. <a href="https://leonkersten.github.io">Website</a>.</li> 
   <li>Koen Teuwen on threat intelligence operationalization.</li>
 </ul>
 
