--- a/index.html
+++ b/index.html
@@ -105,37 +105,41 @@ Our research draws from several fields, including computer security, economics, 
 <br/><br/>
 I am the Scientific Director of the <b>Eindhoven Security Hub SOC</b>, a facility managed by the TU/e SECurity group and devoted to delivering cutting-edge security monitoring services to its customers. Read more about it <a href="http://security1.win.tue.nl/doku.php?id=esh-soc"> here</a> and <a href="https://www.eindhovensecurityhub.nl">here</a>.
 
-<h3>Students</h3>
-
-<ul>
-	<li>Michele Campobasso on cybercrime operations and ecosystems. <a href="https://michelecampobasso.github.io">Website</a>, <a href="https://scholar.google.com/citations?user=vDHUDEAAAAAJ&hl=en&oi=sra"> GScholar profile</a>.</li>
-	<li>Pavlo Burda on advanced social engineering. <a href="https://www.pavlo.it">Website</a>, <a href="https://scholar.google.com/citations?user=X6xku1Im18sC&hl=en&oi=ao"> GScholar profile</a>.</li>
-  <li>Leon Kersten on decision support for cybersecurity analysis. <a href="https://leonkersten.github.io">Website</a>.</li> 
-  <li>Koen Teuwen on threat intelligence operationalization.</li>
-</ul>
-
 
 <h3>About</h3>
 
   
   
-  <pre><code>        Office:         MF 6.122 
+  <pre><code>        Office:         MF 6.061 
                         P.O. Box 513, 5600 MB
                         Eindhoven, The Netherlands
         Email:          l.allodi at tue.nl
         PGP fngrprnt:   950E 3DC8 EB66 DFF3 B64D  7848 A0AD 0BB6 5DC4 98F1
 </code></pre>
 
-<p>Public key <a href="/public.txt">here</a>.</p>
+<p>Public key <a href="/public.txt">here</a>. Curriculum Vitae <a href="curriculum-allodi.pdf">here</a>.</p>
 
-<p><a href="curriculum-allodi.pdf">Curriculum Vitae</a></p>
+<p>LinkedIn (hardly updated) at <a href="https://it.linkedin.com/in/lallodi"> this</a>.<br/>
+Mastodon (hardly accessed) at <a rel="me" href="https://fediscience.org/@securescientist">@securescientist@fediscience.org</a>.<br/>
+I am active on BlueSky 🦋 at <a href="https://bsky.app/profile/securescientist.eu">@securescientist.eu</a>.<br/></p>
 
-<p>I <b>DO NOT</b> have a Facebook profile.<br/>
-My LinkedIn page (hardly updated) is <a href="https://it.linkedin.com/in/lallodi"> this</a>.<br/>
-My Twitter handle is <a href="https://twitter.com/securescientist">@securescientist</a>.<br/>
-I am on Mastodon at <a rel="me" href="https://fediscience.org/@securescientist">@securescientist@fediscience.org</a>.</p>
+<p>I am <strong>neither</strong> on Facebook <strong>nor</strong> on Twitter/X. My Twitter handle <ins>was</ins> @securescientist. Following the demise of reach, pluralism, and reasoned discourse on &ldquo;X&rdquo;, I have deactivated and deleted my account effective on 14/12/2024.</p>
 
 
+
+<h3>Students</h3>
+
+<h4>Ongoing</h4>
+<ul>
+  
+  <li> Roy Ricaldi on evolving cybercrime activities.</li>
+  <li>Leon Kersten on decision support for cybersecurity analysis. <a href="https://leonkersten.github.io">Website</a>.</li> 
+  <li>Koen Teuwen on threat intelligence operationalization.</li>
+</ul>
+
+<h4>Graduated</h4>
+<li>Michele Campobasso on cybercrime operations and ecosystems. <a href="https://michelecampobasso.github.io">Website</a>, <a href="https://scholar.google.com/citations?user=vDHUDEAAAAAJ&hl=en&oi=sra"> GScholar profile</a>.</li>
+  <li>Pavlo Burda on advanced social engineering. <a href="https://www.pavlo.it">Website</a>, <a href="https://scholar.google.com/citations?user=X6xku1Im18sC&hl=en&oi=ao"> GScholar profile</a>.</li>
 
 <h3>Some highlights</h3>
 
@@ -164,6 +168,9 @@ The workshop is held annually jointly with the IEEE European Symposium on Securi
 
 <h4>A selection of publications</h4>
 <ul>
+<li><a href='https://www.pavlo.it'>Burda, P.</a>, Allodi, L., &amp; Zannone, N. (2024). Cognition in social engineering empirical research: a systematic literature review. <b>ACM Transactions on Computer-Human Interaction</b>, 31(2), 1-55. <a href='https://dl.acm.org/doi/pdf/10.1145/3635149'>PDF</a></li>
+</ul>
+<ul>
 <li>Marin, I. and <a href='https://www.pavlo.it'>Burda, P.</a> and Zannone, N. and Allodi, L. (2023), The Influence of Human Factors on the Intention to Report Phishing Emails  <i> <b> In Proceedings of the 2023 ACM CHI Conference on Human Factors in Computing Systems. </b> <a href='https://pburda.win.tue.nl/publications/CHI_2023.pdf'> Preprint</a></i>.</li>
 </ul>
 <ul>
@@ -171,9 +178,6 @@ The workshop is held annually jointly with the IEEE European Symposium on Securi
 </ul>
 <ul>
 <li>Martin Rosso, <a href='https://michelecampobasso.github.io'>Michele Campobasso</a>, Ganduulga Gankhuyag, Luca Allodi. SAIBERSOC: Synthetic Attack Injection to Benchmark and Evaluate the Performance of Security Operation Centers. <strong>In Proceedings of the 36th Annual Computer Security Applications Conference (ACSAC 2020). (acc. rate 23%) Distinguished Paper with Artifacts Award</strong> <a href='https://arxiv.org/abs/2010.08453'> Preprint</a>.</li>
-</ul>
-<ul>
-<li><a href='https://michelecampobasso.github.io'>Michele Campobasso</a>, Luca Allodi. Impersonation-as-a-Service: Characterizing the Emerging Criminal Infrastructure for User Impersonation at Scale. <strong>In Proceedings of the ACM Conference on Computer and Communications Security (ACM CCS 2020). (acc. rate 17%)</strong> <a href='https://arxiv.org/abs/2009.04344'> Preprint</a>.</li>
 </ul>
 <ul>
 <li>Amber van der Heijden, Luca Allodi. Cognitive Triaging of Phishing Attacks. <strong>In Proceedings of Usenix Security 2019</strong>. <b>(Acc. rate 16%).</b> <a href='https://arxiv.org/abs/1905.02162'> Preprint</a>.</li>
